# lumen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSES.md  MORNING_CHECKLIST.md  Makefile  PRODUCT_REPORT.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/cube/: cube.js
backend/cube/schema/examples/: customers.yml  orders.yml
backend/cube/schema/shared/: _macros.yml
backend/cube/schema/verticals/lending/: application.yml  branch.yml  collection.yml  credit_inquiry.yml  customer.yml  loan.yml  loan_officer.yml  payment.yml  skills.yml
backend/cube/schema/verticals/saas_finance/: customers.yml  invoices.yml  subscriptions.yml
backend/cube/schema/verticals/tpch/: customer.yml  lineitem.yml  nation.yml  orders.yml  part.yml  partsupp.yml  region.yml  supplier.yml
backend/services/ai_service/: Dockerfile  critic.py  cube_runner.py  data_profile.py  main.py  query_critic.py  routing.py  schemas.py  stream.py  visualizer.py
backend/services/ai_service/eval/: golden_set.yaml  runner.py
backend/services/ai_service/prompts/: few_shot.py  system.py
backend/services/api_gateway/: main.py
backend/services/auth_service/: main.py
backend/services/etl_service/: worker.py
backend/services/query_service/: cube_client.py  main.py
backend/services/workspace_service/: main.py
backend/shared/: __init__.py  app_db.py  audit.py  auth.py  bedrock_client.py  errors.py  llm_config.py  observability.py  schema_bundle.py  settings.py
backend/shared/llm_providers/: __init__.py  alibaba.py  anthropic.py  base.py  bedrock.py  mock.py  registry.py
backend/tests/: test_chat_sessions.py  test_critic.py  test_model_endpoints.py  test_query_critic.py  test_skills_and_schedules.py  test_tool_definitions.py  test_visualizer_compare.py  test_visualizer_grouped_bar_short_period.py
config/: secrets.local.yaml.example  (+3 more)
(+85 files in other folders)
